--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Ma Collection Marvel Legends</h1>
+    <h1>Collection Marvel Legends</h1>
 
     <input type="text" id="search" placeholder="Rechercher une figurine..." onkeyup="searchFigures()">
 
